src/test/ui/issues/issue-54302-cases.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'s` due to conflicting requirements
  --> $DIR/issue-54302-cases.rs:63:5
   |
LL |     <u32 as RefFoo<u32>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U2, name: BrNamed(crate0:DefIndex(1:27), 'a) })...
   = note: ...but the lifetime must also be valid for the static lifetime...
   = note: ...so that the types are compatible:
           expected Foo<'static, u32>
              found Foo<'_, u32>

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'s` due to conflicting requirements
  --> $DIR/issue-54302-cases.rs:69:5
   |
LL |     <i32 as RefFoo<i32>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U2, name: BrNamed(crate0:DefIndex(1:27), 'a) })...
   = note: ...but the lifetime must also be valid for the static lifetime...
   = note: ...so that the types are compatible:
           expected Foo<'static, i32>
              found Foo<'_, i32>

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'s` due to conflicting requirements
  --> $DIR/issue-54302-cases.rs:75:5
   |
LL |     <u64 as RefFoo<u64>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U2, name: BrNamed(crate0:DefIndex(1:27), 'a) })...
   = note: ...but the lifetime must also be valid for the static lifetime...
   = note: ...so that the types are compatible:
           expected Foo<'static, u64>
              found Foo<'_, u64>

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'s` due to conflicting requirements
  --> $DIR/issue-54302-cases.rs:81:5
   |
LL |     <i64 as RefFoo<i64>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U2, name: BrNamed(crate0:DefIndex(1:27), 'a) })...
   = note: ...but the lifetime must also be valid for the static lifetime...
   = note: ...so that the types are compatible:
           expected Foo<'static, i64>
              found Foo<'_, i64>

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0495`.
